# WWSI_MLOPSGraded

./: .gitignore  README.md
usersvsbots/: Makefile  README.md  pyproject.toml
usersvsbots/docs/: mkdocs.yml
usersvsbots/docs/docs/: index.md
usersvsbots/notebooks/: ml-bot-detection-accuracy-96-9.ipynb
usersvsbots/usersvsbots/: __init__.py  dataset.py  features.py  plots.py
usersvsbots/usersvsbots/modeling/: predict.py  train.py
