[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "usersvsbots"
version = "0.0.1"
description = "Vkontakte (vk.com) fake and real users classification dataset. This is for final MLOps Graded Project"
authors = [
  { name = "Leszek Kwasniewski" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["usersvsbots"]
force_sort_within_sections = true


